--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
   <main>
     <nav class="top-navigation-container">
-      <div>
+      <div class="game-menu">
         <button class="start-game">Start Game</button>
         <button class="reset-game">Reset Game</button>
       </div>
@@ -20,7 +20,7 @@
     </nav>
     <section class="gameboard-container">
       <div class="game-instruction-container">
-        <p>hello world</p>
+        <p>This is a game where you will test your knowledge of the world, life, and the existence of happiness.  Remember to make your answer in the form of a question.  Don't mess up.  Everyone is watching.</p>
 
       </div>
       <table class='game-question-table'>
