--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
     <section class="gameboard-container">
       <div class="game-instruction-container">
         <p>This is a game where you will test your knowledge of the world, life, and the existence of happiness.  Remember to make your answer in the form of a question.  Don't mess up.  Everyone is watching.</p>
+        <h3>Player 1, Enter your name</h3>
+        <input type="text" placeholder="Your name here...">
 
       </div>
       <table class='game-question-table'>
@@ -64,16 +66,16 @@
     </section>
     <footer class="bottom-navigation-container">
       <div>
-        <h1>Player 1</h1>
-        <h2>Score:</h2>
+        <h1 class="player1-name">Player 1</h1>
+        <h2 class="player1-score">Score:</h2>
       </div>
       <div>
-        <h1>Player 2</h1>
-        <h2>Score:</h2>
+        <h1 class="player2-name">Player 2</h1>
+        <h2 class="player2-score">Score:</h2>
       </div>
       <div>
-        <h1>Player 3</h1>
-        <h2>Score:</h2>
+        <h1 class="player3-name">Player 3</h1>
+        <h2 class="player3-score">Score:</h2>
       </div>
     </footer>
 </main>
