adding classes to html question tiles

--- a/index.html
+++ b/index.html
@@ -27,40 +27,40 @@
       </div>
       <table class='game-question-table'>
         <tr>
-          <td>Category1</td>
-          <td>Category2</td>
-          <td>Category3</td>
-          <td>Category4</td>
+          <td class="title-category1 category1">Category1</td>
+          <td class="title-category2 category2">Category2</td>
+          <td class="title-category3 category3">Category3</td>
+          <td class="title-category4 category4">Category4</td>
         </tr>
          <tr>
-          <td>question</td>
-          <td>question</td>
-          <td>question</td>
-          <td>question</td>
+          <td class="question100 category1">question</td>
+          <td class="question100 category2">question</td>
+          <td class="question100 category3">question</td>
+          <td class="question100 category4">question</td>
         </tr>
          <tr>
-          <td>question</td>
-          <td>question</td>
-          <td>question</td>
-          <td>question</td>
+          <td class="question200 category1">question</td>
+          <td class="question200 category2">question</td>
+          <td class="question200 category3">question</td>
+          <td class="question200 category4">question</td>
         </tr> 
         <tr>
-          <td>question</td>
-          <td>question</td>
-          <td>question</td>
-          <td>question</td>
+          <td class="question300 category1">question</td>
+          <td class="question300 category2">question</td>
+          <td class="question300 category3">question</td>
+          <td class="question300 category4">question</td>
         </tr> 
         <tr>
-          <td>question</td>
-          <td>question</td>
-          <td>question</td>
-          <td>question</td>
+          <td class="question400 category1">question</td>
+          <td class="question400 category2">question</td>
+          <td class="question400 category3">question</td>
+          <td class="question400 category4">question</td>
         </tr>
         <tr>
-          <td>500</td>
-          <td>500</td>
-          <td>500</td>
-          <td>500</td>
+          <td class="question500 category1">question</td>
+          <td class="question500 category2">question</td>
+          <td class="question500 category3">question</td>
+          <td class="question500 category4">question</td>
         </tr>
       </table>
     </section>
