--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
   <link href="style.css" rel="stylesheet" type="text/css">
 </head>
 <body>
+
+  <section class="start-screen">
+    <button>Start</button>
+    <input type="" name="">
+  </section>
   <main>
     <nav class="top-navigation-container">
       <div class="game-menu">
@@ -21,8 +26,6 @@
     <section class="gameboard-container">
       <div class="game-instruction-container">
         <p>This is a game where you will test your knowledge of the world, life, and the existence of happiness.  Remember to make your answer in the form of a question.  Don't mess up.  Everyone is watching.</p>
-        <h3>Player 1, Enter your name</h3>
-        <input type="text" placeholder="Your name here...">
 
       </div>
       <table class='game-question-table'>
