Start screen functionality

--- a/index.html
+++ b/index.html
@@ -7,13 +7,18 @@
 <body>
 
   <section class="start-screen">
-    <button>Start</button>
-    <input type="" name="">
+    <h2>Input player names</h2>
+    <input type="text" class="name-input player1-name-input">
+    <input type="text" class="name-input player2-name-input">
+    <input type="text" class="name-input player3-name-input">
+    <button class="start-button">Start</button>
   </section>
+
+
+
   <main>
     <nav class="top-navigation-container">
       <div class="game-menu">
-        <button class="start-game">Start Game</button>
         <button class="reset-game">Reset Game</button>
       </div>
       <div class="title-game">
@@ -88,6 +93,6 @@
 
 
 
-  <script src="script.js" type="text/js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
