Finishing up start screen, onto the game class

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
 
   <section class="start-screen">
-    <h2>Input player names</h2>
+    <h2 class="input-player-name-title">Enter Names To Start Game</h2>
     <input type="text" class="name-input player1-name-input">
     <input type="text" class="name-input player2-name-input">
     <input type="text" class="name-input player3-name-input">
@@ -20,6 +20,7 @@
     <nav class="top-navigation-container">
       <div class="game-menu">
         <button class="reset-game">Reset Game</button>
+        <button class="quit-game">Quit Game</button>
       </div>
       <div class="title-game">
         <p>JEOPARDY!</p>
@@ -41,49 +42,49 @@
           <td class="title-category4 category4">Category4</td>
         </tr>
          <tr>
-          <td class="question100 category1">question</td>
-          <td class="question100 category2">question</td>
-          <td class="question100 category3">question</td>
-          <td class="question100 category4">question</td>
+          <td class="question100 category1">100</td>
+          <td class="question100 category2">100</td>
+          <td class="question100 category3">100</td>
+          <td class="question100 category4">100</td>
         </tr>
          <tr>
-          <td class="question200 category1">question</td>
-          <td class="question200 category2">question</td>
-          <td class="question200 category3">question</td>
-          <td class="question200 category4">question</td>
+          <td class="question200 category1">200</td>
+          <td class="question200 category2">200</td>
+          <td class="question200 category3">200</td>
+          <td class="question200 category4">200</td>
         </tr> 
         <tr>
-          <td class="question300 category1">question</td>
-          <td class="question300 category2">question</td>
-          <td class="question300 category3">question</td>
-          <td class="question300 category4">question</td>
+          <td class="question300 category1">300</td>
+          <td class="question300 category2">300</td>
+          <td class="question300 category3">300</td>
+          <td class="question300 category4">300</td>
         </tr> 
         <tr>
-          <td class="question400 category1">question</td>
-          <td class="question400 category2">question</td>
-          <td class="question400 category3">question</td>
-          <td class="question400 category4">question</td>
+          <td class="question400 category1">400</td>
+          <td class="question400 category2">400</td>
+          <td class="question400 category3">400</td>
+          <td class="question400 category4">400</td>
         </tr>
         <tr>
-          <td class="question500 category1">question</td>
-          <td class="question500 category2">question</td>
-          <td class="question500 category3">question</td>
-          <td class="question500 category4">question</td>
+          <td class="question500 category1">500</td>
+          <td class="question500 category2">500</td>
+          <td class="question500 category3">500</td>
+          <td class="question500 category4">500</td>
         </tr>
       </table>
     </section>
     <footer class="bottom-navigation-container">
       <div>
         <h1 class="player1-name">Player 1</h1>
-        <h2 class="player1-score">Score:</h2>
+        <h2 class="player1-score">Score: 0</h2>
       </div>
       <div>
         <h1 class="player2-name">Player 2</h1>
-        <h2 class="player2-score">Score:</h2>
+        <h2 class="player2-score">Score: 0</h2>
       </div>
       <div>
         <h1 class="player3-name">Player 3</h1>
-        <h2 class="player3-score">Score:</h2>
+        <h2 class="player3-score">Score: 0</h2>
       </div>
     </footer>
 </main>
