Writing test for players and game class

--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
       </div>
       <table class='game-question-table'>
         <tr>
-          <td class="title-category1 category1">Category1</td>
-          <td class="title-category2 category2">Category2</td>
-          <td class="title-category3 category3">Category3</td>
-          <td class="title-category4 category4">Category4</td>
+          <td class="dan title-category1 category1">Category1</td>
+          <td class="dan title-category2 category2">Category2</td>
+          <td class="dan title-category3 category3">Category3</td>
+          <td class="dan title-category4 category4">Category4</td>
         </tr>
          <tr>
           <td class="question100 category1">100</td>
@@ -90,10 +90,10 @@
 </main>
 
 
-
-
-
-
-  <script src="script.js"></script>
+  <script src="./js/data.js"></script>
+  <script src="./js/Question.js"></script>
+  <script src="./js/player.js"></script>
+  <script src="./js/game.js"></script>
+  <script src="./js/script.js"></script>
 </body>
 </html>
