--- a/index.html
+++ b/index.html
@@ -75,16 +75,16 @@
     </section>
     <footer class="bottom-navigation-container">
       <div>
-        <h1 class="player1-name">Player 1</h1>
-        <h2 class="player1-score">Score: 0</h2>
+        <h1 class="player-name player1-name">Player 1</h1>
+        <h2 class="score player1-score">Score: 0</h2>
       </div>
       <div>
-        <h1 class="player2-name">Player 2</h1>
-        <h2 class="player2-score">Score: 0</h2>
+        <h1 class="player-name player2-name">Player 2</h1>
+        <h2 class="score player2-score">Score: 0</h2>
       </div>
       <div>
-        <h1 class="player3-name">Player 3</h1>
-        <h2 class="player3-score">Score: 0</h2>
+        <h1 class="player-name player3-name">Player 3</h1>
+        <h2 class="score player3-score">Score: 0</h2>
       </div>
     </footer>
 </main>
