adds setNames functionality dynamics

--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
       </div>
       <table class='game-question-table'>
         <tr>
-          <td class="dan title-category1 category1">Category1</td>
-          <td class="dan title-category2 category2">Category2</td>
-          <td class="dan title-category3 category3">Category3</td>
-          <td class="dan title-category4 category4">Category4</td>
+          <td class="category title-category1 category1">Category1</td>
+          <td class="category title-category2 category2">Category2</td>
+          <td class="category title-category3 category3">Category3</td>
+          <td class="category title-category4 category4">Category4</td>
         </tr>
          <tr>
           <td class="question100 category1">100</td>
@@ -74,22 +74,25 @@
       </table>
     </section>
     <footer class="bottom-navigation-container">
-      <div>
-        <h1 class="player-name player1-name">Player 1</h1>
-        <h2 class="score player1-score">Score: 0</h2>
+      <div class="player1-name">
+        
+       <!--  <h1 class="player-name player1-name">Player 1</h1>
+        <h2 class="score player1-score">Score: 0</h2> -->
       </div>
       <div>
-        <h1 class="player-name player2-name">Player 2</h1>
-        <h2 class="score player2-score">Score: 0</h2>
+        <ul class="player2-name"></ul>
+    <!--     <h1 class="player-name player2-name">Player 2</h1>
+        <h2 class="score player2-score">Score: 0</h2> -->
       </div>
       <div>
-        <h1 class="player-name player3-name">Player 3</h1>
-        <h2 class="score player3-score">Score: 0</h2>
+        <ul class="player3-name"></ul>
+        <!-- <h1 class="player-name player3-name">Player 3</h1>
+        <h2 class="score player3-score">Score: 0</h2> -->
       </div>
     </footer>
 </main>
 
-
+  <script src="./js/domUpdates.js"></script>
   <script src="./js/data.js"></script>
   <script src="./js/Question.js"></script>
   <script src="./js/player.js"></script>
