--- a/index.html
+++ b/index.html
@@ -73,22 +73,8 @@
         </tr>
       </table>
     </section>
-    <footer class="bottom-navigation-container">
-      <div class="player1-name">
-        
-       <!--  <h1 class="player-name player1-name">Player 1</h1>
-        <h2 class="score player1-score">Score: 0</h2> -->
-      </div>
-      <div>
-        <ul class="player2-name"></ul>
-    <!--     <h1 class="player-name player2-name">Player 2</h1>
-        <h2 class="score player2-score">Score: 0</h2> -->
-      </div>
-      <div>
-        <ul class="player3-name"></ul>
-        <!-- <h1 class="player-name player3-name">Player 3</h1>
-        <h2 class="score player3-score">Score: 0</h2> -->
-      </div>
+    <footer class="bottom-names-container">
+    
     </footer>
 </main>
 
