--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
     <section class="gameboard-container">
       <div class="game-instruction-container">
         <p class="question-display"></p>
-        <input type="text" placeholder=
-        "answer-here" class="question-answer">
+        <input type="text" placeholder="answer-here" class="question-answer-input">
+        <button class="submit-answer-button">Submit Answer</button>
 
       </div>
       <table class='game-question-table'>
