appends score for player 1 to the dom

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <input type="text" class="name-input player1-name-input">
     <input type="text" class="name-input player2-name-input">
     <input type="text" class="name-input player3-name-input">
-    <button class="start-button">Start</button>
+    <input class="start-button" type="submit"></input>
   </section>
 
 
@@ -23,7 +23,6 @@
         <button class="quit-game">Quit Game</button>
       </div>
       <div class="title-game">
-        <p>JEOPARDY!</p>
       </div>
       <div class="round-display">
         <p>Round 1</p>
