updates scores for each player on DOM player objects

--- a/index.html
+++ b/index.html
@@ -11,10 +11,8 @@
     <input type="text" class="name-input player1-name-input">
     <input type="text" class="name-input player2-name-input">
     <input type="text" class="name-input player3-name-input">
-    <input class="start-button" type="submit"></input>
+    <input class="start-button" type="submit" value="submit"></input>
   </section>
-
-
 
   <main>
     <nav class="top-navigation-container">
@@ -32,7 +30,7 @@
       <div class="game-instruction-container">
         <p class="question-display"></p>
         <input type="text" placeholder="answer-here" class="question-answer-input" >
-        <button class="submit-answer-button">Submit Answer</button>
+        <input class="submit-answer-button" type="submit" value="submit"></input>
       </div>
       <table class='game-question-table'>
         <tr>
