--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
   <script src="./js/domUpdates.js"></script>
   <script src="./js/data.js"></script>
   <script src="./js/Question.js"></script>
+  <script src="./js/DailyDouble.js"></script>
   <script src="./js/player.js"></script>
   <script src="./js/game.js"></script>
   <script src="./js/script.js"></script>
